--- a/women/women.html
+++ b/women/women.html
@@ -91,7 +91,7 @@
   </style>
 </head>
 <body>
-    <a href="../home.html"><p>&gt;HOME</p></a>
+    <a href="../index.html"><p>&gt;HOME</p></a>
 
   <h1>Explore Our Women's Dress Collection</h1>
 
