--- a/app/food.html
+++ b/app/food.html
@@ -12,7 +12,7 @@
       <h1>Smart Food Shop</h1>
       <nav>
         <ul>
-          <li><a href="../home.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
          
         </ul>
       </nav>
